# grimoire

./: .env.example  Cargo.toml  Dioxus.toml  package.json  pnpm-lock.yaml  vite.config.ts
assets/: daisy.css
src/: App.tsx  lib.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/client/: index.html  package.json  pnpm-lock.yaml
src/components/: echo.rs  hero.rs  mod.rs  navbar.rs
src/models/: file.rs
src/server/: Cargo.toml
src/server/migrations/2026-02-13-100856-0000_create_folders/: down.sql  up.sql
src/server/src/: lib.rs  main.rs  schema.rs
src/server/src/config/: db.rs  mod.rs
src/server/src/models/: folder.rs  mod.rs
src/server/src/routes/: folder_routes.rs  mod.rs
src/server/src/services/: folder_service.rs
src/services/: file_services.rs  mod.rs
src/views/: library.rs
