[package]
name = "grimoire"
version = "0.1.0"
authors = ["Lounis Abdellou <lounisabdellou.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daisy_rsx = "0.1.54"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
