[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenv = "0.15.0"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
serde_json = "1.0.149"
